--- a/cloud/fetchArticleInfo/package.json
+++ b/cloud/fetchArticleInfo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spiderWeatherInfo",
+  "name": "fetchArticleInfo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,10 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "blueimp-md5": "^2.18.0",
-    "cheerio": "^1.0.0-rc.3",
-    "html-entities": "^1.3.1",
-    "superagent": "^6.1.0",
-    "superagent-charset": "^1.2.0",
-    "wx-server-sdk": "^2.5.3"
+    "wx-server-sdk": "^2.5.1"
   }
 }
