--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "classes-mini",
   "version": "1.0.0",
   "private": true,
-  "description": "《班级圈圈》小程序端",
+  "description": "《气象台历》小程序端",
   "templateInfo": {
     "name": "taro-ui",
     "typescript": true,
