--- a/cloud/spiderArticleInfo/package.json
+++ b/cloud/spiderArticleInfo/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "html-entities": "^1.3.1",
+    "nodemailer": "latest",
     "superagent": "^6.0.0",
     "superagent-charset": "^1.2.0",
     "wx-server-sdk": "^2.5.1"
