--- a/cloud/spiderWeatherInfo/config.json
+++ b/cloud/spiderWeatherInfo/config.json
@@ -6,7 +6,7 @@
     {
       "name": "spiderWeatherInfo",
       "type": "timer",
-      "config": "0 0 * * * * *"
+      "config": "0 0 12 * * * *"
     }
   ]
 }
