feat:(upload)新增对上传图片的敏感校验

--- a/cloud/fetchCloudInfo/config.json
+++ b/cloud/fetchCloudInfo/config.json
@@ -1,5 +1,9 @@
 {
   "permissions": {
-    "openapi": ["wxacode.getUnlimited"]
+    "openapi": [
+      "security.imgSecCheck",
+      "security.msgSecCheck",
+      "wxacode.getUnlimited"
+    ]
   }
 }
