--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,9 @@ project.private.config.json
 **/dist/**
 **/static/**
 **/node_modules/**
-**/resource/**
 **/false/**
 **/src/utils/test/**
+resource/**
 
 #忽略上传的文件
 **/yarn.lock
